welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:10: error: Unmatched closing brace '}' ignored here
}
^FlowerPot:13: error: eof expected but '}' found.
}
^